<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">E.C.S</string>
    <string name="service_failed">Service Failed</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="add_new">Add new elevator</string>
    <string name="delete_group">Delete group</string>
    <string name="click_to_add_elevator">New Elevator</string>
    <string name="click_to_add_floor">New Floor</string>
    <string name="pick_elevator">Pick Elevator</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="remove">Remove</string>
    <string name="pick_floor">Pick Floor</string>
    <string name="onin">Onin Electronics</string>
    <string name="hilow">Hilow Technology</string>
    <string name="onintech_supported">Powered by Onin Electronics</string>
    <string name="produced_by">Produced by Hilow Technology Software</string>
    <string name="channel_arrived_description">The elevator has arrived</string>
    <string name="elevator_arrived">Your elevator has arrived</string>
    <string name="floor_n">Floor %d</string>
    <string name="description">Description</string>
    <string name="address">Address</string>
    <string name="elevator_count">Elevator Count</string>
    <string name="ok">OK</string>
</resources>
